2008-05-18  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-bzr.el (vc-bzr-after-dir-status): Remove unused binding.

2008-05-18  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-yank.el (calc-kill): Make sure that only the stack is
	operated on.
	(calc-kill-region): Kill entire lines.

2008-05-17  Glenn Morris  <rgm@gnu.org>

	* ezimage.el (ezimage-use-images): Drop support for Emacs < 21 and
	simplify initial value.
	(defezimage): Drop support for Emacs without defimage, use a featurep
	test rather than fboundp when defining, drop with-no-warnings.
	(ezimage-insert-over-text): Move featurep test inside
	add-text-properties.

	* elide-head.el (elide-head-headers-to-hide): Handle GPLv3 format.

	* net/tramp.el (top-level): Load auth-source when compiling.

	* progmodes/fortran.el (fortran-font-lock-keywords-2): Add .eqv., .neqv.

2008-05-17  Andreas Schwab  <schwab@suse.de>

	* vc-dispatcher.el (vc-dir-mode-map): Fix M-down and M-up binding.

2008-05-17  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-annotate-show-diff-revision-at-line): Change
	vc-diff-internal arg to match what vc-deduce-fileseset returns now.

2008-05-17  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* menu-bar.el (menu-bar-select-buffer): Reinsert it as msb.el uses it.

2008-05-17  Jim Meyering  <meyering@redhat.com>

	* ido.el (ido-save-history): Do not emit a trailing newline at the
	end of the ido history file.

2008-05-16  John Paul Wallington  <jpw@pobox.com>

	* vc-dispatcher.el (top-level): Revert previous change: require cl
	when compiling.

2008-05-16  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc.el (vc-default-status-printer)
	(vc-default-prettify-state-info): Enhance the state prettyprinter
	to deall better with unknown states and indirect through it when
	painting vc-dir buffers.

2008-05-16  John Paul Wallington  <jpw@pobox.com>

	* vc-dispatcher.el (top-level): Don't require cl when compiling.
	(vc-dir-mode-map): Fix backquote.